--- a/EveFitScanUI/App.config
+++ b/EveFitScanUI/App.config
@@ -25,6 +25,9 @@
             <setting name="AlwaysOnTop" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="PassiveTank" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EveFitScanUI.Properties.Settings>
     </userSettings>
 </configuration>
