--- a/EveFitScanUI/Properties/Settings.settings
+++ b/EveFitScanUI/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="AlwaysOnTop" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="PassiveTank" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
