get fit value from evepraisal

--- a/EveFitScanUI/App.config
+++ b/EveFitScanUI/App.config
@@ -28,6 +28,9 @@
             <setting name="PassiveTank" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="GetPrices" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EveFitScanUI.Properties.Settings>
     </userSettings>
 </configuration>
