--- a/EveFitScanUI/EveFitScanUI.csproj
+++ b/EveFitScanUI/EveFitScanUI.csproj
@@ -50,6 +50,10 @@
     <ApplicationIcon>ship_scan.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -66,6 +70,7 @@
     <Compile Include="FitScanProcessor.cs" />
     <Compile Include="FitScanProcessor.CurrentState.cs" />
     <Compile Include="FitScanProcessor.Paste.cs" />
+    <Compile Include="FitScanProcessor.Pricing.cs" />
     <Compile Include="Form1.Buttons.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +79,9 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.Pricing.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.ShipSelect.cs">
       <SubType>Form</SubType>
@@ -101,6 +109,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
