get fit value is ON by default

--- a/EveFitScanUI/App.config
+++ b/EveFitScanUI/App.config
@@ -29,7 +29,7 @@
                 <value>False</value>
             </setting>
             <setting name="GetPrices" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </EveFitScanUI.Properties.Settings>
     </userSettings>
