--- a/EveFitScanUI/EveFitScanUI.csproj
+++ b/EveFitScanUI/EveFitScanUI.csproj
@@ -50,6 +50,10 @@
     <ApplicationIcon>ship_scan.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.6.15.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.6.15\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -72,6 +76,9 @@
     <Compile Include="FitScanProcessor.Paste.cs" />
     <Compile Include="FitScanProcessor.Pricing.cs" />
     <Compile Include="Form1.Buttons.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.CheckUpdate.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.cs">
