highlight for full fit or full tank

--- a/EveFitScanUI/App.config
+++ b/EveFitScanUI/App.config
@@ -34,6 +34,9 @@
             <setting name="ADCActive" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Highlight" serializeAs="String">
+                <value>1</value>
+            </setting>
         </EveFitScanUI.Properties.Settings>
     </userSettings>
 </configuration>
