--- a/EveFitScanUI/Properties/Settings.settings
+++ b/EveFitScanUI/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="ADCActive" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Highlight" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
