highlight yellow for full tank, green for full fit

--- a/EveFitScanUI/App.config
+++ b/EveFitScanUI/App.config
@@ -35,7 +35,7 @@
                 <value>False</value>
             </setting>
             <setting name="Highlight" serializeAs="String">
-                <value>1</value>
+                <value>True</value>
             </setting>
         </EveFitScanUI.Properties.Settings>
     </userSettings>
