SoCT ships, and the option to bring window to front on new scan

--- a/EveFitScanUI/App.config
+++ b/EveFitScanUI/App.config
@@ -37,6 +37,9 @@
             <setting name="Highlight" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ActivateOnFitUpdate" serializeAs="String">
+                <value>True</value>
+            </setting>
         </EveFitScanUI.Properties.Settings>
     </userSettings>
 </configuration>
