--- a/EveFitScanUI/Properties/Settings.settings
+++ b/EveFitScanUI/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="Highlight" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ActivateOnFitUpdate" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
