Abyssal modules & polarized fix

--- a/DBConverter/DBConverter.csproj
+++ b/DBConverter/DBConverter.csproj
@@ -49,13 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.Abyssal.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Program.ModuleActive.cs" />
     <Compile Include="Program.ModuleAttributes.cs" />
     <Compile Include="Program.ModuleAttributesDB.cs" />
     <Compile Include="Program.ModuleDescription.cs" />
+    <Compile Include="Program.Module.cs" />
     <Compile Include="Program.ModuleSlot.cs" />
     <Compile Include="Program.ModuleTraits.cs" />
+    <Compile Include="Program.Ship.cs" />
     <Compile Include="Program.ShipAttributes.cs" />
     <Compile Include="Program.ShipDescription.cs" />
     <Compile Include="Program.ShipTraits.cs" />
